📝 chore: update swagger
